--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ boto >= 2.36.0
 bolt-python >= 0.7.0
 tifffile >= 0.9.2
 keras >= 1.0
-thunder-python >= 1.4.2
+# thunder-python >= 1.4.2
 pandas >= 0.17.1
 requests >= 2.9.1
-simplejson >= 2.0.9
+# simplejson >= 2.0.9
