--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ pydicom >= 0.9.9
 pillow>=2.1.0
 boto >= 2.36.0
 bolt-python >= 0.7.0
-tifffile >= 0.10.0
+# tifffile >= 0.10.0
 keras >= 1.0
 # thunder-python >= 1.4.2
 pandas >= 0.17.1
