adding test functions, adding custom spatial derivative operator, adding tf graph visualization code, fixing requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,9 @@ pydicom >= 0.9.9
 pillow>=2.1.0
 boto >= 2.36.0
 bolt-python >= 0.7.0
-# tifffile >= 0.10.0
+tensorflow >= 0.12
 keras >= 1.0
-# thunder-python >= 1.4.2
 pandas >= 0.17.1
 requests >= 2.9.1
 pynrrd >= 0.2.1
-# simplejson >= 2.0.9
+# thunder-python >= 1.4.2
