adding full TF-IO code, adding scaling, adding simple IO tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,8 @@ pydicom >= 0.9.9
 pillow>=2.1.0
 boto >= 2.36.0
 bolt-python >= 0.7.0
-tensorflow >= 0.12
+tensorflow-gpu >= 1.2.1
 keras >= 1.0
 pandas >= 0.17.1
 requests >= 2.9.1
 pynrrd >= 0.2.1
-# thunder-python >= 1.4.2
