--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ boto >= 2.36.0
 bolt-python >= 0.7.0
 tensorflow-gpu >= 1.2.1
 keras >= 2.0
+git+https://www.github.com/farizrahman4u/keras-contrib.git # for inorm
 pandas >= 0.17.1
 requests >= 2.9.1
 pynrrd >= 0.2.1
