--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ pydicom >= 0.9.9
 pillow>=2.1.0
 boto >= 2.36.0
 bolt-python >= 0.7.0
-tensorflow-gpu >= 1.2.1
+tensorflow-gpu >= 1.2.0
 keras >= 2.0
-keras-contrib # for inorm
+git+https://github.com/farizrahman4u/keras-contrib # for inorm
 pandas >= 0.17.1
 requests >= 2.9.1
 pynrrd >= 0.2.1
