--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
   - conda update -q conda
   - conda info -a
   - conda create --yes -q -n test python=$TRAVIS_PYTHON_VERSION pip numpy scipy pytest boto
+  - conda env update -n pyqae -f binder/environment.yml
   - source activate test
   - pip install .
   - pip install -r requirements-dev.txt
