--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -32,6 +32,7 @@ dependencies:
   - ipyvolume
   - spacy
   - xlwt
+  - nbserverproxy
   - pip:
     - keras<=3.0
     - git+https://github.com/keras-team/keras-contrib
@@ -44,5 +45,5 @@ dependencies:
     - graphviz
     - appmode
     - cloudpickle
-    - pyspark
+    - pyspark==2.3.0
     - findspark
