--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pydicom >= 0.9.9
 pillow>=2.1.0
 boto >= 2.36.0
 bolt-python >= 0.7.0
+pyspark == 2.3.0
 tensorflow-gpu >= 1.2.0
 keras >= 2.0
 git+https://github.com/farizrahman4u/keras-contrib # for inorm
